adding index template

--- a/elastic/logstash/pipeline/logstash.conf
+++ b/elastic/logstash/pipeline/logstash.conf
@@ -103,8 +103,22 @@ filter {
         grok {
           match => { "[nginx][access][url]" => [".*/api/mines/%{UUID:[mine][id]}", ".*/568/api/documents/mines/%{UUID:[mine][id]}"] }
         }
-      }
 
+        # lookup by mine id
+        translate {
+          field => "[mine][id]"
+          destination => "[@metadata][mine_json]"
+          dictionary_path => "/usr/share/logstash/dictionaries/mine.lookup.yml"
+          exact => true
+        }
+
+        if [@metadata][mine_json] {
+          json {
+            source => "[@metadata][mine_json]"
+            target => "[mine_data]"
+          }
+        }
+      }
     }
     else if [fileset][name] == "error" {
       grok {
@@ -119,6 +133,7 @@ filter {
         remove_field => "[nginx][error][time]"
       }
     }
+
   }
 }
 
@@ -128,7 +143,6 @@ output {
   # stdout {}
 
   elasticsearch {
-    hosts => ["https://ee8a3fc1619d4da3a9859fa465ec234c.us-west-2.aws.found.io:9243"]
     hosts => "${ES_HOST}"
     user => "${ES_USER}"
     password => "${ES_PASSWORD}"
