--- a/elastic/logstash/Dockerfile
+++ b/elastic/logstash/Dockerfile
@@ -3,6 +3,8 @@ ARG ES_VERSION
 FROM docker.elastic.co/logstash/logstash:${ES_VERSION}
 RUN rm -f /usr/share/logstash/pipeline/logstash.conf
 
+RUN mkdir -p /usr/share/logstash/monitor
+
 # copy dictionaries
 RUN mkdir -p /usr/share/logstash/dictionaries
 ADD dictionaries /usr/share/logstash/dictionaries
