--- a/elastic/logstash/pipeline/logstash.conf
+++ b/elastic/logstash/pipeline/logstash.conf
@@ -1,8 +1,12 @@
 input {
-  beats {
-    port => 5044
-    host => "0.0.0.0"
+
+  # stdin {}
+
+  file {
+    path => "/usr/share/logstash/monitor/*.log"
+    start_position => "beginning"
   }
+
 }
 filter {
 
@@ -13,111 +17,118 @@ filter {
     method => "MURMUR3"
   }
 
+  if [path] =~ "access" {
 
-  if [fileset][module] == "nginx" {
-    if [fileset][name] == "access" {
-      grok {
-        match => { "message" => ["%{IPORHOST:[nginx][access][remote_ip]} - %{DATA:[nginx][access][user_name]} \[%{HTTPDATE:[nginx][access][time]}\] \"%{WORD:[nginx][access][method]} %{DATA:[nginx][access][url]} HTTP/%{NUMBER:[nginx][access][http_version]}\" %{NUMBER:[nginx][access][response_code]} %{NUMBER:[nginx][access][body_sent][bytes]} \"%{DATA:[nginx][access][referrer]}\" \"Bearer %{DATA:[@metadata][jwt]}\" \"%{DATA:[nginx][access][agent]}\" \"%{IPORHOST:[nginx][access][client_ip]}\" \"%{GREEDYDATA:[nginx][access][payload]}\""] }
-        remove_field => "message"
-      }
-      mutate {
-        add_field => { "read_timestamp" => "%{@timestamp}" }
-      }
-      date {
-        match => [ "[nginx][access][time]", "dd/MMM/YYYY:H:m:s Z" ]
-        remove_field => "[nginx][access][time]"
-      }
-      useragent {
-        source => "[nginx][access][agent]"
-        target => "[nginx][access][user_agent]"
-        remove_field => "[nginx][access][agent]"
-      }
-      geoip {
-        source => "[nginx][access][remote_ip]"
-        target => "[nginx][access][geoip]"
-      }
+    mutate {
+      add_field => { "[log][type]" => "access" }
+    }
 
-      geoip {
-        source => "[nginx][access][client_ip]"
-        target => "[nginx][access][server][geoip]"
-      }
+    grok {
+      match => { "message" => ["%{IPORHOST:[nginx][access][remote_ip]} - %{DATA:[nginx][access][user_name]} \[%{HTTPDATE:[nginx][access][time]}\] \"%{WORD:[nginx][access][method]} %{DATA:[nginx][access][url]} HTTP/%{NUMBER:[nginx][access][http_version]}\" %{NUMBER:[nginx][access][response_code]} %{NUMBER:[nginx][access][body_sent][bytes]} \"%{DATA:[nginx][access][referrer]}\" \"Bearer %{DATA:[@metadata][jwt]}\" \"%{DATA:[nginx][access][agent]}\" \"%{IPORHOST:[nginx][access][client_ip]}\" \"%{GREEDYDATA:[nginx][access][payload]}\""] }
+      remove_field => "message"
+    }
+    mutate {
+      add_field => { "read_timestamp" => "%{@timestamp}" }
+    }
+    date {
+      match => [ "[nginx][access][time]", "dd/MMM/YYYY:H:m:s Z" ]
+      remove_field => "[nginx][access][time]"
+    }
+    useragent {
+      source => "[nginx][access][agent]"
+      target => "[nginx][access][user_agent]"
+      remove_field => "[nginx][access][agent]"
+    }
+    geoip {
+      source => "[nginx][access][remote_ip]"
+      target => "[nginx][access][geoip]"
+    }
 
-
-      # decode JWT
-      if [@metadata][jwt] {
-
-
-        mutate {
-          split => { "[@metadata][jwt]" => "." }
-        }
-
-        mutate {
-          copy => { "[@metadata][jwt][1]" => "[@metadata][b64]" }
-        }
-
-        ruby {
-          init => "require 'base64'"
-          code => "event.set('[@metadata][jwt_decoded]', Base64.decode64(event.get('[@metadata][b64]')))"
-        }
-
-        json {
-          source => "[@metadata][jwt_decoded]"
-          target => "jwt_data"
-        }
-
-      }
-
-      if [nginx][access][payload] {
-        # remove \ from payload
-        mutate {
-          gsub => [
-            "[nginx][access][payload]", "[\\]", ""
-          ]
-        }
-
-        # parse json to data field
-        json {
-          source => "[nginx][access][payload]"
-          target => "[data]"
-        }
-      }
+    geoip {
+      source => "[nginx][access][client_ip]"
+      target => "[nginx][access][server][geoip]"
+    }
 
 
-      # Get the type of operation of interest
+    # decode JWT
+    if [@metadata][jwt] {
+
 
       mutate {
-        add_field => { "[@metadata][action]" => "%{[nginx][access][method]} %{[nginx][access][url]}" }
+        split => { "[@metadata][jwt]" => "." }
       }
 
-      # Get the operation
-      translate {
-        field => "[@metadata][action]"
-        destination => "operation"
-        dictionary_path => "/usr/share/logstash/dictionaries/action.yml"
-        regex => true
-        fallback => "other"
+      mutate {
+        copy => { "[@metadata][jwt][1]" => "[@metadata][b64]" }
       }
 
-      # Extract mine guid based on operation
-      if [operation] != "other" {
-        grok {
-          match => { "[nginx][access][url]" => [".*/api/mines/%{UUID:[mine][id]}", ".*/568/api/documents/mines/%{UUID:[mine][id]}"] }
-        }
+      ruby {
+        init => "require 'base64'"
+        code => "event.set('[@metadata][jwt_decoded]', Base64.decode64(event.get('[@metadata][b64]')))"
+      }
+
+      json {
+        source => "[@metadata][jwt_decoded]"
+        target => "jwt_data"
       }
 
     }
-    else if [fileset][name] == "error" {
-      grok {
-        match => { "message" => ["%{DATA:[nginx][error][time]} \[%{DATA:[nginx][error][level]}\] %{NUMBER:[nginx][error][pid]}#%{NUMBER:[nginx][error][tid]}: (\*%{NUMBER:[nginx][error][connection_id]} )?%{GREEDYDATA:[nginx][error][message]}"] }
-        remove_field => "message"
-      }
+
+    if [nginx][access][payload] {
+      # remove \ from payload
       mutate {
-        rename => { "@timestamp" => "read_timestamp" }
+        gsub => [
+          "[nginx][access][payload]", "[\\]", ""
+        ]
       }
-      date {
-        match => [ "[nginx][error][time]", "YYYY/MM/dd H:m:s" ]
-        remove_field => "[nginx][error][time]"
+
+      # parse json to data field
+      json {
+        source => "[nginx][access][payload]"
+        target => "[data]"
       }
+    }
+
+
+    # Get the type of operation of interest
+
+    mutate {
+      add_field => { "[@metadata][action]" => "%{[nginx][access][method]} %{[nginx][access][url]}" }
+    }
+
+    # Get the operation
+    translate {
+      field => "[@metadata][action]"
+      destination => "operation"
+      dictionary_path => "/usr/share/logstash/dictionaries/action.yml"
+      regex => true
+      fallback => "other"
+    }
+
+    # Extract mine guid based on operation
+    if [operation] != "other" {
+      grok {
+        match => { "[nginx][access][url]" => [".*/api/mines/%{UUID:[mine][id]}", ".*/568/api/documents/mines/%{UUID:[mine][id]}"] }
+      }
+    }
+
+  }
+  else if [path] =~ "error" {
+
+    mutate {
+      add_field => { "[log][type]" => "error" }
+    }
+
+    grok {
+      match => { "message" => ["%{DATA:[nginx][error][time]} \[%{DATA:[nginx][error][level]}\] %{NUMBER:[nginx][error][pid]}#%{NUMBER:[nginx][error][tid]}: (\*%{NUMBER:[nginx][error][connection_id]} )?%{GREEDYDATA:[nginx][error][message]}"] }
+      remove_field => "message"
+    }
+    mutate {
+      rename => { "@timestamp" => "read_timestamp" }
+    }
+    date {
+      match => [ "[nginx][error][time]", "YYYY/MM/dd H:m:s" ]
+      remove_field => "[nginx][error][time]"
     }
   }
 }
@@ -131,7 +142,7 @@ output {
     hosts => "${ES_HOST}"
     user => "${ES_USER}"
     password => "${ES_PASSWORD}"
-    index => "mds-nginx-%{+YYYY.MM.dd}"
+    index => "mds-nginx-%{[log][type]}-%{+YYYY.MM.dd}"
     document_id => "%{[@metadata][fingerprint]}"
   }
 
