--- a/elastic/logstash/pipeline/logstash.conf
+++ b/elastic/logstash/pipeline/logstash.conf
@@ -18,11 +18,6 @@ filter {
   }
 
   if [path] =~ "access" {
-
-    mutate {
-      add_field => { "[log][type]" => "access" }
-    }
-
     grok {
       match => { "message" => ["%{IPORHOST:[nginx][access][remote_ip]} - %{DATA:[nginx][access][user_name]} \[%{HTTPDATE:[nginx][access][time]}\] \"%{WORD:[nginx][access][method]} %{DATA:[nginx][access][url]} HTTP/%{NUMBER:[nginx][access][http_version]}\" %{NUMBER:[nginx][access][response_code]} %{NUMBER:[nginx][access][body_sent][bytes]} \"%{DATA:[nginx][access][referrer]}\" \"Bearer %{DATA:[@metadata][jwt]}\" \"%{DATA:[nginx][access][agent]}\" \"%{IPORHOST:[nginx][access][client_ip]}\" \"%{GREEDYDATA:[nginx][access][payload]}\""] }
       remove_field => "message"
@@ -110,8 +105,22 @@ filter {
       grok {
         match => { "[nginx][access][url]" => [".*/api/mines/%{UUID:[mine][id]}", ".*/568/api/documents/mines/%{UUID:[mine][id]}"] }
       }
-    }
 
+      # lookup by mine id
+      translate {
+        field => "[mine][id]"
+        destination => "[@metadata][mine_json]"
+        dictionary_path => "/usr/share/logstash/dictionaries/mine.lookup.yml"
+        exact => true
+      }
+
+      if [@metadata][mine_json] {
+        json {
+          source => "[@metadata][mine_json]"
+          target => "[mine_data]"
+        }
+      }
+    }
   }
   else if [path] =~ "error" {
 
