remove filebeat and add logstas instructions

--- a/elastic/logstash/pipeline/logstash.conf
+++ b/elastic/logstash/pipeline/logstash.conf
@@ -159,6 +159,8 @@ output {
     password => "${ES_PASSWORD}"
     index => "mds-nginx-%{[log][type]}-%{+YYYY.MM.dd}"
     document_id => "%{[@metadata][fingerprint]}"
+    template => "/usr/share/logstash/templates/mds.nginx.template.json"
+    template_name => "mds-nginx"
   }
 
 }
