--- a/elastic/logstash/Dockerfile
+++ b/elastic/logstash/Dockerfile
@@ -9,5 +9,9 @@ RUN mkdir -p /usr/share/logstash/monitor
 RUN mkdir -p /usr/share/logstash/dictionaries
 ADD dictionaries /usr/share/logstash/dictionaries
 
+# copy tempate
+RUN mkdir -p /usr/share/logstash/templates
+ADD templates /usr/share/logstash/templates
+
 ADD pipeline/ /usr/share/logstash/pipeline/
 ADD config/ /usr/share/logstash/config/
