revisiting patterns with urls and adding mine ids

--- a/elastic/logstash/pipeline/logstash.conf
+++ b/elastic/logstash/pipeline/logstash.conf
@@ -109,7 +109,7 @@ filter {
     # Extract mine guid based on operation
     if [operation] != "other" {
       grok {
-        match => { "[nginx][access][url]" => [".*/api/mines/%{UUID:[mine][id]}", ".*/568/api/documents/mines/%{UUID:[mine][id]}"] }
+        match => { "[nginx][access][url]" => [".*/api/mines/%{UUID:[mine][id]}", ".*/api/documents/mines/%{UUID:[mine][id]}"] }
       }
 
       # lookup by mine id
