--- a/elastic/logstash/templates/mds.nginx.template.json
+++ b/elastic/logstash/templates/mds.nginx.template.json
@@ -206,6 +206,14 @@
                             "name": {
                                 "type": "keyword",
                                 "ignore_above": 1024
+                            },
+                            "numero": {
+                                "type": "keyword",
+                                "ignore_above": 1024
+                            },
+                            "region": {
+                                "type": "keyword",
+                                "ignore_above": 1024
                             }
                         }
                     },
