add suport for MS and CORE

--- a/elastic/logstash/pipeline/logstash.conf
+++ b/elastic/logstash/pipeline/logstash.conf
@@ -25,7 +25,7 @@ filter {
     }
     
     grok {
-      match => { "message" => ["%{IPORHOST:[nginx][access][remote_ip]} - %{DATA:[nginx][access][user_name]} \[%{HTTPDATE:[nginx][access][time]}\] \"%{WORD:[nginx][access][method]} %{DATA:[nginx][access][url]} HTTP/%{NUMBER:[nginx][access][http_version]}\" %{NUMBER:[nginx][access][response_code]} %{NUMBER:[nginx][access][body_sent][bytes]} \"%{DATA:[nginx][access][referrer]}\" \"Bearer %{DATA:[@metadata][jwt]}\" \"%{DATA:[nginx][access][agent]}\" \"%{IPORHOST:[nginx][access][client_ip]}\" \"%{GREEDYDATA:[nginx][access][payload]}\""] }
+      match => { "message" => ["%{IPORHOST:[nginx][access][remote_ip]} - %{DATA:[nginx][access][user_name]} \[%{HTTPDATE:[nginx][access][time]}\] \"%{WORD:[nginx][access][method]} %{DATA:[nginx][access][url]} HTTP/%{NUMBER:[nginx][access][http_version]}\" %{NUMBER:[nginx][access][response_code]} %{NUMBER:[nginx][access][body_sent][bytes]} \"%{DATA:[nginx][access][referrer]}\" \"%{DATA:[@metadata][jwt]}\" \"%{DATA:[nginx][access][agent]}\" \"%{IPORHOST:[nginx][access][client_ip]}\" \"%{GREEDYDATA:[nginx][access][payload]}\""] }
       remove_field => "message"
     }
     mutate {
@@ -53,7 +53,6 @@ filter {
 
     # decode JWT
     if [@metadata][jwt] {
-
 
       mutate {
         split => { "[@metadata][jwt]" => "." }
@@ -102,8 +101,8 @@ filter {
       field => "[@metadata][action]"
       destination => "operation"
       dictionary_path => "/usr/share/logstash/dictionaries/action.yml"
-      regex => true
       fallback => "other"
+      regex => true
     }
 
     # Extract mine guid based on operation
@@ -117,7 +116,7 @@ filter {
         field => "[mine][id]"
         destination => "[@metadata][mine_json]"
         dictionary_path => "/usr/share/logstash/dictionaries/mine.lookup.yml"
-        exact => true
+        regex => true
       }
 
       if [@metadata][mine_json] {
@@ -126,6 +125,18 @@ filter {
           target => "[mine_data]"
         }
       }
+
+      if [nginx][access][referrer] {
+        translate {
+          field => "[nginx][access][referrer]"
+          destination => "[mds][group]"
+          dictionary_path => "/usr/share/logstash/dictionaries/group.yml"
+          regex => true
+          fallback => 'other'
+          exact => true
+        }
+      }
+
     }
   }
   else if [path] =~ "error" {
