--- a/elastic/logstash/templates/mds.nginx.template.json
+++ b/elastic/logstash/templates/mds.nginx.template.json
@@ -217,6 +217,14 @@
                             }
                         }
                     },
+                    "mds": {
+                        "properties": {
+                            "group": {
+                                "type": "keyword",
+                                "ignore_above": 1024
+                            }
+                        }
+                    },
                     "nginx": {
                         "properties": {
                             "access": {
